--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prettier:fix": "npx prettier --write .",
     "prepare": "husky install",
     "test": "jest",
-    "test:watch": "jest --watch --verbose"
+    "test:watch": "jest --watch --verbose",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "next": "14.0.4",
@@ -21,6 +23,14 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
+    "@storybook/addon-essentials": "^7.6.9",
+    "@storybook/addon-interactions": "^7.6.9",
+    "@storybook/addon-links": "^7.6.9",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.9",
+    "@storybook/nextjs": "^7.6.9",
+    "@storybook/react": "^7.6.9",
+    "@storybook/test": "^7.6.9",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
@@ -40,6 +50,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-testing-library": "^6.2.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
@@ -47,6 +58,7 @@
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "^3.2.2",
+    "storybook": "^7.6.9",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
