--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "storybook": "^7.6.9",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
