--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prettier:fix": "npx prettier --write .",
     "prepare": "husky install",
     "test": "jest",
-    "test:watch": "jest --watch --verbose",
+    "test:dev": "jest --watch --verbose",
     "storybook": "storybook dev -p 6006 --ci",
     "build-storybook": "storybook build"
   },
