--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@storybook/nextjs": "^7.6.9",
     "@storybook/react": "^7.6.9",
     "@storybook/test": "^7.6.9",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
