--- a/components.json
+++ b/components.json
@@ -12,7 +12,7 @@
   },
   "aliases": {
     "components": "@/components",
-    "ui": "@/components/reference",
+    "ui": "@/components/_reference",
     "utils": "@/utils/styles"
   }
 }
