--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prod": "next build && next start -p 3001",
     "lint": "next lint",
     "prettier:check": "npx prettier --check .",
     "prettier:fix": "npx prettier --write .",
